fix: content on mobile

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -1,6 +1,3 @@
 .dashboard {
-	@apply flex flex-col justify-between w-full h-full bg-zinc-900 text-white;
-	overflow: hidden;
-	height: 100vh;
-	position: relative;
+	@apply flex flex-col justify-between w-full h-full flex-1 bg-zinc-900 text-white;
 }
