--- a/src/index.scss
+++ b/src/index.scss
@@ -50,11 +50,7 @@ body,
 	html,
 	body,
 	#root {
-		height: 100vh;
-		width: 100%;
-		overflow: hidden;
 		touch-action: none;
-		-ms-touch-action: none;
 	}
 }
 
